--- a/ecom/views/display.ejs
+++ b/ecom/views/display.ejs
@@ -50,6 +50,11 @@
                                                         <input type="hidden" value="<%=x._id%>" name="product">
                                                         <button class="btn btn-warning btn-xs">addtocart</button>
                                                     </form>
+                                                    <form action="/buy" method="POST">
+                                                        <input type="hidden" value="<%=x._id%>" name="product">
+                                                        <button class="btn btn-warning btn-xs">buy</button>
+                                                    </form>
+
                             </div>
 
                             <!--</a>-->
