--- a/ecom/views/userProfile/profile.ejs
+++ b/ecom/views/userProfile/profile.ejs
@@ -38,9 +38,11 @@
                                                     <%=x.total%>
                                                         date:
                                                         <%=x.created_date%>
-                                                            <form id="delete" action="/order/<%= x._id %>?_method=DELETE" method="post">
-                                                                <button class="btn btn-warning btn-xs">DELETE</button>
-                                                            </form>
+                                                            subtotal:
+                                                            <%=x.subtotal%>
+                                                                <form id="delete" action="/order/<%= x._id %>?_method=DELETE" method="post">
+                                                                    <button class="btn btn-warning btn-xs">DELETE</button>
+                                                                </form>
                                         </p>
                                     </div>
                                 </div>
@@ -49,33 +51,34 @@
             </div>
 
             <%}%>
+                <%=subtotals%>
 
-                <style>
-                    p {
-                        margin: 10%;
-                    }
-                    
-                    .card {
-                        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.281);
-                        max-width: 300px;
-                        margin: auto;
-                        margin-top: 5%;
-                        text-align: center;
-                    }
-                    
-                    img {
-                        border-radius: 50%;
-                    }
-                    
-                    .title {
-                        color: orange;
-                        font-size: 18px;
-                    }
-                    
-                    #password,
-                    #Newpassword {
-                        width: 80%;
-                        margin-left: 2%;
-                    }
-                </style>
-                <%- include("../partials/footer") %>
+                    <style>
+                        p {
+                            margin: 10%;
+                        }
+                        
+                        .card {
+                            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.281);
+                            max-width: 300px;
+                            margin: auto;
+                            margin-top: 5%;
+                            text-align: center;
+                        }
+                        
+                        img {
+                            border-radius: 50%;
+                        }
+                        
+                        .title {
+                            color: orange;
+                            font-size: 18px;
+                        }
+                        
+                        #password,
+                        #Newpassword {
+                            width: 80%;
+                            margin-left: 2%;
+                        }
+                    </style>
+                    <%- include("../partials/footer") %>
