--- a/ecom/views/admin/adminuser.ejs
+++ b/ecom/views/admin/adminuser.ejs
@@ -1,4 +1,5 @@
 <%- include("../partials/header") %>
+    <link rel="stylesheet" href="/css/adminuser.css" type="text/css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <table>
         <tr>
@@ -116,33 +117,5 @@
 
         }
     </script>
-
-    <style>
-        h4 {
-            margin-top: 2%;
-        }
-        
-        table {
-            margin: 5%;
-        }
-        
-        table,
-        th,
-        td {
-            border: 1px solid black;
-            border-collapse: collapse;
-        }
-        
-        th,
-        td {
-            padding: 15px;
-        }
-        
-        #mychart {
-            width: 10%;
-            height: 10%;
-        }
-    </style>
-
 
     <%- include("../partials/footer") %>
