--- a/ecom/views/cart/cart.ejs
+++ b/ecom/views/cart/cart.ejs
@@ -1,5 +1,5 @@
 <%- include("../partials/header") %>
-
+    <link rel="stylesheet" href="/css/cart.css" type="text/css">
     <h1>cart</h1>
     <%cart.forEach(function(x){%>
         <div class="thumbnail" style="width: 40%;height: 5%;">
@@ -30,47 +30,9 @@
                 subtotal:
                 <%=subtotal%>
             </div>
-            <!-- <div class="card">
-                    <%cart.forEach(function(x){%>
-                        <p>
-                            name:
-                            <%=x.name%>
-                                quantity:
-                                <%=x.quantity%>
-                                    price:
-                                    <%=x.price%>
-                                        total:
-                                        <%=x.total%>
-                                            image:
-                                            <%=x.image%>
-                                                <form action="/cart/edit?_method=PUT" method="POST">
-                                                    <input type="hidden" value="<%=x._id%>" name="id">
-                                                    <button class="btn btn-warning">increase</button>
-                                                </form>
-                                                <form id="delete" action="/cart/<%= x._id %>?_method=DELETE" method="post">
-                                                    <button class="btn btn-danger btn-sm">DELETE</button>
-                                                </form>
-                        </p>
-                        <%})%>
-                </div>-->
 
             <%if(Object.keys(cart).length === 0){%>
                 <h1 id="message">&#128151 No products yet add cart to see &#128151 </h1>
                 <%}%>
 
-                    <style>
-                        .card {
-                            background-color: rgba(255, 158, 31, 0.562);
-                            width: 25%;
-                            height: 50%;
-                            margin-left: 5%;
-                            border-radius: 2%;
-                            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-                            text-align: center;
-                        }
-                        
-                        .thumbnail {
-                            margin-left: 5%;
-                        }
-                    </style>
                     <%- include("../partials/footer") %>
