--- a/ecom/views/userProfile/profile.ejs
+++ b/ecom/views/userProfile/profile.ejs
@@ -1,4 +1,5 @@
 <%- include("../partials/header") %>
+    <link rel="stylesheet" href="/css/profile.css" type="text/css">
     <%if(!currentUser){%>
         <p id="message">&#x1f61f Please
             <a href="/login">Login or register</a> to view your profile</p>
@@ -52,7 +53,7 @@
                 <%=subtotals%>
 
                     <style>
-                        p {
+                        /*   p {
                             margin: 10%;
                         }
                         
@@ -77,6 +78,6 @@
                         #Newpassword {
                             width: 80%;
                             margin-left: 2%;
-                        }
+                        }*/
                     </style>
                     <%- include("../partials/footer") %>
